syntax = "proto3";

package pb;
option go_package = "./pb";

message ImMeta{
  string DetailType = 1;//元事件 连接 断开 状态更新 解密错误
  string  ImId = 2; //连接ID
  uint64 LoginId = 3; //登录ID
  string Ip = 4; //IP
  string Issue = 5; //设备 谁颁布的jwt
  string Version = 6; //版本
  string ImServer = 7; //连接的服务器
  bytes Data = 8; //数据
}

message ImData{
  string  ImId = 1;
  bytes  ImData = 2;
}

message ImResp{
  bool Ok = 1;
}

service ImLogin{
  //元事件 连接 断开 状态更新 解密错误
  rpc Meta(ImMeta) returns (ImResp);
  // 服务端主动推送
  rpc GetImData(ImData) returns (ImResp);
}